testsuite/tests/properties/invalid_dflt_arg_override/wrong_value/test.lkt
import common

class FooNode implements Node[FooNode] {
    @exported @abstract fun prop(a: Bool=true): Bool
}

class Example: FooNode {
    fun prop(a: Bool=false): Bool = a
}
